[package]
name = "rust-demo"
version = "0.1.0"
authors = ["Bermular tech"]
edition = "2018"

[dependencies]
cron = "0.6.0"
chrono = "0.4.6"
rocket = "0.4.1"
yaml-rust = "0.4"
derive_more = "0.14.0"
#substrate = { git="https://github.com/paritytech/substrate" }
substrate-keystore = {  path="../../../opensource/paritytech/substrate/core/keystore" }
substrate-primitives = {  path="../../../opensource/paritytech/substrate/core/primitives" }
hex = "0.3"
rand = "0.6"
serde_json = "1.0"
subtle = "2.0"
tempdir = "0.3.7"
ed25519-dalek = "1.0.0-pre.1"